--- a/mask.html
+++ b/mask.html
@@ -31,7 +31,8 @@
                     $(this).val('');
                     return;
                 }
-                $(this).val(newVal);
+//                $(this).val(newVal);
+//                $(this).val(newVal);
                 
             });
         });
