--- a/mask.html
+++ b/mask.html
@@ -33,6 +33,11 @@
                 }
 //                $(this).val(newVal);             
 //                $(this).val(newVal);                      
+//                $(this).val(newVal);                      
+//                $(this).val(newVal);                      
+//                $(this).val(newVal);                      
+//                $(this).val(newVal);                      
+//                $(this).val(newVal);                      
             });
         });
 
