--- a/mask.html
+++ b/mask.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Input Mask</title>
     <title>Input Mask</title>
+    <title>Input Mask</title>
 </head>
 <body>
     <input type="text" id="phone"> 36dfd63dfd63df63df36
